fix: show uploaded filename in course presentation form

--- a/templates/course_info/presentation/form/general.html.twig
+++ b/templates/course_info/presentation/form/general.html.twig
@@ -93,6 +93,10 @@
             toggleMediaType();
         });
 
+        $(document).on('change', '#general_image', function(e){
+            $(this).next('.custom-file-label').html(e.target.files[0].name);
+        })
+
         toggleMediaType();
 
         $('form[name="general"]').find('.select2entity').select2entity();
