feat: tuto links configurable in env vars

--- a/templates/course_info/dashboard/view/dashboard.html.twig
+++ b/templates/course_info/dashboard/view/dashboard.html.twig
@@ -10,7 +10,7 @@
                         <p>
                             {{ 'app.dashboard.intro_panel.description' | trans }}
                         </p>
-                        <a href="https://unspod.unice.fr/video/7110-comment-remplir-son-syllabus-sur-moodle/" target="_blank" class="btn btn-info">
+                        <a href="{{ tutorial_link_syllabus_dashboard }}" target="_blank" class="btn btn-info">
                             {{ 'app.dashboard.intro_panel.access_tutorial' | trans }}
                         </a>
                     </div>
