--- a/templates/partial/_admin_sidebar.html.twig
+++ b/templates/partial/_admin_sidebar.html.twig
@@ -16,7 +16,7 @@
     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
         <li class="nav-item has-treeview">
-            <a class="nav-link {{ printActiveAdminSidebarLink(['app.admin.dashboard.composer require lexik/translation-bundle']) }}"
+            <a class="nav-link {{ printActiveAdminSidebarLink(['app.admin.dashboard.index']) }}"
                href="{{ path('app.admin.dashboard.index') }}"
                id="menu-dashboard">
                 <i class="nav-icon fas fa-th"></i>
@@ -296,7 +296,7 @@
 
                 <li class="nav-item pl-2">
                     <a href="{{ path('app.admin.groups.index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_groups']) }}">
+                       class="nav-link {{ printActiveAdminSidebarLink(['app.admin.groups']) }}">
                         <i class="nav-icon fas fa-users"></i>
                         <p>
                             {{ 'admin.sidebar.groups' | trans }}
