--- a/templates/course_info/dashboard/view/dashboard.html.twig
+++ b/templates/course_info/dashboard/view/dashboard.html.twig
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="mt-2 ml-3">
+            {#<div class="mt-2 ml-3">
                 <p>
                     <span style="font-weight: 700;">{{ 'app.dashboard.label.creation_date' | trans }}</span>
                     : {% if courseInfo.creationDate is not empty %}
@@ -120,7 +120,7 @@
                         {{ courseInfo.creationDate|localizeddate('full', 'none', null) }} {{ courseInfo.creationDate|date('H:i') }}
                     {% endif %}
                 </p>
-            </div>
+            </div>#}
         </div>
 
         <!-- button -->
