--- a/templates/email/publication_publisher.html.twig
+++ b/templates/email/publication_publisher.html.twig
@@ -168,9 +168,10 @@
                                         </tr>
                                         <tr>
                                             <td align="center" class="padding-copy textlightStyle" style="padding: 20px 0 0 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #3F3D33;"><p><span style="color: #9c010f;">N'oubliez pas de vérifier que votre cours n'est pas caché pour vos étudiant⸱e⸱s. Vous pouvez retrouver<a href="{{ tutorial_link_mail_published }}" style="text-decoration: none; font-weight: bold; color: #9c010f;"> la procédure pour le rendre visible ici.</a></span></p>
-                                                <p style="margin: 0px;">Si le syllabus du cours que vous avez publié est en <strong>licence générale</strong>, un⸱e ingénieur⸱e pédagogique de L@UCA reviendra vers vous.</p>
+                                                <p style="margin: 0px;">Si vous avez des questions sur le syllabus, merci d'<strong>utiliser le forum</strong> de l'espace "Syllabus mode d'emploi".</p>
                                                 <p style="margin: 0px;">&nbsp;</p>
-                                                <p style="margin: 0px;">Si vous avez des questions sur le syllabus, merci d'<strong>utiliser le forum</strong> de l'espace "Syllabus mode d'emploi".</p></td>
+                                                <p style="margin: 0px"><a href="{{ tutorial_link_syllabus_issue }}" style="text-decoration: none; font-weight: bold; color: #9c010f;">Syllabus mode d'emploi</a></p>
+                                            </td>
                                         </tr>
                                         </tbody></table>
                                 </td>
