--- a/templates/groups/_form.html.twig
+++ b/templates/groups/_form.html.twig
@@ -10,5 +10,5 @@
         </div>
     {% endif %}
 
-    <button class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
+    <button type="submit" class="btn btn-primary">{{ 'admin.button.save' | trans }}</button>
 {{ form_end(form) }}
