--- a/templates/groups/index.html.twig
+++ b/templates/groups/index.html.twig
@@ -45,9 +45,12 @@
                             <td>
                                 {% set deleteFormView = deleteFormsView[groups.id] %}
                                 {{ form_start(deleteFormView) }}
-                                    <button type="button" class="btn btn-danger float-right warning-delete" data-toggle="modal" data-target="#warningDeleteModal">
-                                        <i class="fas fa-trash"></i>
-                                    </button>
+                                <button type="button" class="btn btn-danger float-right warning-delete"
+                                        data-toggle="modal"
+                                        data-target="#warningDeleteModal"
+                                        data-action-url="{{ path('app.admin.groups.delete', {'id': groups.id }) }}">
+                                    <i class="fas fa-trash"></i>
+                                </button>
                                 {{ form_end(deleteFormView) }}
                             </td>
                         </tr>
@@ -66,4 +69,33 @@
         {% endif %}
     </div>
 
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        $(document).ready(function () {
+            $('.group-deleted').on('click', function () {
+                var id = $(this).attr('data-group-id');
+                bootbox.confirm({
+                    message: "{{ 'confirm.group.deleted' | trans }}",
+                    buttons: {
+                        confirm: {
+                            label: '{{ 'yes' | trans }}',
+                            className: 'btn-danger'
+                        },
+                        cancel: {
+                            label: '{{ 'no' | trans }}',
+                            className: 'btn-secondary'
+                        }
+                    },
+                    callback: function (result) {
+                        if (result === true) {
+                            location.href = Routing.generate('app.admin.groups.delete', {'id': id});
+                        }
+                    }
+                });
+            });
+        });
+    </script>
 {% endblock %}
