--- a/templates/course_info/admin/_form.html.twig
+++ b/templates/course_info/admin/_form.html.twig
@@ -2,5 +2,5 @@
     {{ form_row(form.year) }}
     {{ form_row(form.title) }}
     {{ form_row(form.structure) }}
-    <button class="btn btn-primary float-right">{{ button_label|default('Enregistrer') }}</button>
+    <button type="submit" class="btn btn-primary float-right">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
