--- a/templates/course_info/objectives_course/form/critical_achievement.html.twig
+++ b/templates/course_info/objectives_course/form/critical_achievement.html.twig
@@ -1,5 +1,6 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.objectives.critical_achievement.add',
-    {'id': courseInfo.id }), 'data-card': 'card-critical_achievement'}}) }}
+{#{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.objectives.critical_achievement.add',
+    {'id': courseInfo.id }), 'data-card': 'card-critical_achievement'}}) }}#}
+{{ form_start(form) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
