test: admin/ImportController - unfinished

--- a/templates/import/course_info.html.twig
+++ b/templates/import/course_info.html.twig
@@ -18,7 +18,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-primary">{{ 'admin.button.import' | trans }}</button>
+                        <button type="submit" class="btn btn-primary">{{ 'admin.button.import' | trans }}</button>
                     </div>
                 </div>
             </div>
