test: fixed deprecated routes call

--- a/templates/course/show.html.twig
+++ b/templates/course/show.html.twig
@@ -171,7 +171,7 @@
                     <div class="col-12">
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary">{{ 'admin.button.filter' | trans }}</button>
-                            <a class="btn btn-danger" href="{{  path('app_admin.course_show', { 'id' : course.id })  }}">{{ 'admin.button.reset_filters' | trans }}</a>
+                            <a class="btn btn-danger" href="{{  path('app.admin.course.show', { 'id' : course.id })  }}">{{ 'admin.button.reset_filters' | trans }}</a>
                         </div>
                     </div>
                 </div>
