fix: modal enforceFocus override

--- a/templates/course_info/activities/activities.html.twig
+++ b/templates/course_info/activities/activities.html.twig
@@ -89,6 +89,7 @@
     {{ parent() }}
     <script>
 
+        $.fn.modal.Constructor.prototype._enforceFocus = function() {};
 
         $(document).ready(function() {
             /**
