--- a/templates/lightVersion/light_layout.html.twig
+++ b/templates/lightVersion/light_layout.html.twig
@@ -7,7 +7,7 @@
     </div>
 
     <div>
-        <img class="w-100" src="{{ asset('build/images/image_banniere.png') }}">
+        <img class="w-100" style="height: 20vh; background-position: center; background-repeat: no-repeat;" src="{{ asset('build/images/image_banniere.png') }}">
     </div>
 
     <div class="light-view">
