feat: add a public content window and restricted content

--- a/templates/course_info/layout.html.twig
+++ b/templates/course_info/layout.html.twig
@@ -3,6 +3,9 @@
 {% block modals %}
     {% include 'default/modal.html.twig' %}
     {% include 'modal/FillingHelpSyllabus.html.twig' %}
+    {% include 'modal/LibraryInformation.html.twig' %}
+    {% include 'modal/PublicContent.html.twig' %}
+    {% include 'modal/RestrictedContent.html.twig' %}
 {% endblock %}
 
 {% block navbar %}
