--- a/templates/course_info/equipment/equipment.html.twig
+++ b/templates/course_info/equipment/equipment.html.twig
@@ -9,34 +9,12 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between">
                     <h3 class="text-blue-title">{{ 'app.equipment.view.resources' | trans }}</h3>
-                    <button type="button" class="edit-button btn button-orange" data-title="{{ 'app.equipment.view.edit' | trans }}"
+                    <button type="button" class="edit-button btn button-orange"
+                            data-title="{{ 'app.equipment.view.edit' | trans }}"
                             data-toggle="modal" data-target="#bibliographieModal"
                     >
                         {{ 'app.equipment.view.edit' | trans }}
                     </button>
-                    <!-- Modal -->
-                    <div class="modal fade" id="bibliographieModal" tabindex="-1" role="dialog" aria-labelledby="infoBibliographiqueModal" aria-hidden="true" data-backdrop="static">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title text-blue" id="infoBibliographiqueModal">Recueil de la bibliographie</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <p>
-                                        Le contenu de votre bibliographie est transmis automatiquement au Service Commun de la Documentation (SCD) une fois par semestre.
-                                    </p>
-                                    <p>
-                                        Les bibliotèques Universitaires (BU) pourront ainsi commander les références bibliographiques que vous préconisez dans vos cours et adapter leur catalogue
-                                        à vos besoins et ceux des étudiants
-                                    </p>
-                                    <button type="button" class="btn btn-primary mr-auto" data-dismiss="modal">J'ai compris</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="card-body">
