--- a/templates/modal/FillingHelpSyllabus.html.twig
+++ b/templates/modal/FillingHelpSyllabus.html.twig
@@ -3,28 +3,30 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title text-blue" id="fillingHelpSyllabus">Aide au remplissage du syllabus</h5>
+                <h4 class="modal-title" id="fillingHelpSyllabus">Aide au remplissage du syllabus</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <div>
-                    <h4>Conseil technique</h4>
+                    <h5>Conseil technique</h5>
                     <p>Cette application a été dessiné pour une résolution d'écran de 1024x768 pixels et plus.</p>
                     <p>Nous vous recommandons d'utiliser les navigateurs Chrome ou Firefox afin de profiter d'une
                         experience d'utilisation optimale.</p>
                 </div>
                 <div>
-                    <h4>Conseil pédagogigue</h4>
-                    <p>Si vous souhaitez recevoir un avis d'un.e ingénieur.e pédagogique sur votre syllabus, vous pouvez écrire à luca.pedagogique@univ.cotedazur.fr </p>
+                    <h5>Conseil pédagogigue</h5>
+                    <p>Si vous souhaitez recevoir un avis d'un.e ingénieur.e pédagogique sur votre syllabus, vous pouvez
+                        écrire à luca.pedagogique@univ.cotedazur.fr </p>
                 </div>
                 <div>
-                    <h4>Signaler un problème</h4>
-                    <p>Rendez-vous sur l'espace "Syllabus mode d'emploi" et expliquer votre problème dans le forum d'assistance.</p>
+                    <h5>Signaler un problème</h5>
+                    <p>Rendez-vous sur l'espace "Syllabus mode d'emploi" et expliquer votre problème dans le forum
+                        d'assistance.</p>
                 </div>
                 <div>
-                    <h4>Tutoriel et conseils en ligne</h4>
+                    <h5>Tutoriel et conseils en ligne</h5>
                     <p>Vous trouverez de nombreuses ressources pour vous aider à remplir votre syllabus sur :</p>
                 </div>
                 <div class="d-flex justify-content-center">
